--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,5 +34,4 @@ jobs:
         working-directory: ./jpacman-framework
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        # TODO: Replace <PROJECT_KEY> with your SonarCloud project key
-        run: xvfb-run mvn -B verify sonar:sonar -Dsonar.projectKey=INFOM124-Verification-et-Validation_25-26-BOUCHARD-Mallory -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=$SONAR_TOKEN
+        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=INFOM124-Verification-et-Validation_25-26-BOUCHARD-Mallory
