--- a/jpacman-framework/pom.xml
+++ b/jpacman-framework/pom.xml
@@ -277,6 +277,7 @@
 				</dependencies>
 				<configuration>
 					<trimStackTrace>false</trimStackTrace>
+					<argLine>-Djava.awt.headless=true</argLine>
 				</configuration>
 			</plugin>
 			<plugin>
